Modifié dashboard et ajouté la logique pour emprunt

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -208,6 +208,12 @@
             <a href="{% url 'clients_list' %}" class="sidebar-link">
                 👥 Clients
             </a>
+           <!-- Bouton pour gérer les emprunts -->
+            <a href="{% url 'borrow_create' %}" class="sidebar-link" >
+                📚 Gestion des Emprunts
+            </a>
+
+
             
             <!-- <a href="#" class="sidebar-link">
                 {% comment %}  Returns {% endcomment %}
