Fix: correction loan_create view et bouton nouvel emprunt

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -208,7 +208,9 @@
             <a href="{% url 'clients_list' %}" class="sidebar-link">
                 👥 Clients
             </a>
-           
+          <a href="{% url 'loan_list' %}" class="sidebar-link">
+                📚 Emprunts
+            </a>
 
 
             
