--- a/Client/client_app/templates/loans/loan_create.html
+++ b/Client/client_app/templates/loans/loan_create.html
@@ -155,6 +155,9 @@
             <h1>➕ Nouvel Emprunt</h1>
             <p>Créer un nouveau prêt de livre</p>
         </div>
+         <div style="display: flex; gap: 10px;">
+                <a href="{% url 'dashboard' %}" class="nav-button" style="text-decoration: none; padding: 10px 15px; background: #dbe2ef; color: #3f72af; border-radius: 5px; font-weight: bold;">🏠 Dashboard</a>
+            </div>
 
         {% if messages %}
         <div class="messages">
