Update members link in dashboard to point to members_list

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -94,7 +94,7 @@
             <a href="{% url 'users_list' %}" class="sidebar-link">
                 📖 Users
             </a>
-             <a href="{% url 'members' %}" class="sidebar-link">
+             <a href="{% url 'members_list' %}" class="sidebar-link">
                 📖 Members
             </a>
             
