refactor: comment out members list display in members.html and related URL path

--- a/Client/client_app/templates/client_app/members.html
+++ b/Client/client_app/templates/client_app/members.html
@@ -50,7 +50,7 @@
             <div class="message-container error-message">{{ error_message }}</div>
         {% endif %}
 
-        {% if members %}
+        <!-- {% if members %}
             <h3>Membres enregistrés : {{ members|length }}</h3>
             
             <table style="width: 100%;">
@@ -91,7 +91,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-        {% else %}
+        {% else %} -->
             <div style="padding: 40px; text-align: center;">
                 <p>Aucun membre trouvé dans la bibliothèque.</p>
                 <p><small>Cliquez sur "Inscrire un Nouveau Membre" pour commencer.</small></p>
